@@ -551,7 +551,7 @@ C                    WIND ARE CREATED)
 
 C  PRESET AND UPDATE SOME OPTIONS AND READ IN DATE/TIME
 
-      CALL W3TAGB('SYNDAT_SYNDATA',2020,0009,1200,'NP22')
+      CALL W3TAGB('SYNDAT_SYNDATA',2020,0283,1200,'NP22')
 
       MWAVEZ   = MWAVE
       PTOPAZ   = PTOPAL
